Fix text wrapping for solutions

--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -17,7 +17,13 @@ table.solutions {
   td { vertical-align: top; }
 
   td.name { @include link-table-cell(10px 15px); }
-  td.script { word-break: break-all; font-variant-ligatures: none; }
+  td.script {
+    word-break: break-all;
+    font-variant-ligatures: none;
+    span {
+      white-space: pre-wrap;
+    }
+  }
   td.timestamp { white-space: nowrap; }
 
   .points { width: 150px; white-space: nowrap; }
